Disable auto-hyperlink of phone number

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="format-detection" content="telephone=no">
     <title>Cascading Call Me</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
